fix accessibility contrast contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,7 +567,8 @@ input[type="submit"] {
     padding: .4rem 0;
     background-color: #2196f3;
     color: #ffffff;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
+    font-weight: 600;
 }
 input, textarea {
     border: 2px solid #2196f3;
